--- a/backend/templates/donation_form.html
+++ b/backend/templates/donation_form.html
@@ -1,1 +1,15 @@
+{% extends "base.html" %}
+{% block title %}Donation Form{% endblock %}
+{% block content %}
+  <h2>Donation</h2>
+  <form method="post">
+    {{ form.csrf_token }}
+    {{ form.donationDate.label }} {{ form.donationDate(class="form-control mb-2") }}
+    {{ form.amount.label }} {{ form.amount(class="form-control mb-2") }}
+    {{ form.method.label }} {{ form.method(class="form-control mb-2") }}
+    {{ form.recurringYN.label }} {{ form.recurringYN(class="form-select mb-2") }}
+    {{ form.notes.label }} {{ form.notes(class="form-control mb-2") }}
+    <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
+  </form>
+{% endblock %}
 
