--- a/backend/templates/sentto_form.html
+++ b/backend/templates/sentto_form.html
@@ -1,1 +1,13 @@
+{% extends "base.html" %}
+{% block title %}SentTo Form{% endblock %}
+{% block content %}
+  <h2>SentTo</h2>
+  <form method="post">
+    {{ form.csrf_token }}
+    {{ form.newsletterID.label }} {{ form.newsletterID(class="form-select mb-2") }}
+    {{ form.alumniID.label }} {{ form.alumniID(class="form-select mb-2") }}
+    {{ form.sentDate.label }} {{ form.sentDate(class="form-control mb-2") }}
+    <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
+  </form>
+{% endblock %}
 
