--- a/backend/templates/newsletter_list.html
+++ b/backend/templates/newsletter_list.html
@@ -1,1 +1,33 @@
+{% extends "base.html" %}
+{% block title %}Newsletter List{% endblock %}
+{% block content %}
+  <h2>Newsletters</h2>
+  {% if session.perms.insert %}
+    <a href="{{ url_for('newsletter.add') }}" class="btn btn-primary mb-3">Add New Newsletter</a>
+  {% endif %}
+  <table class="table table-striped">
+    <thead>
+      <tr><th>ID</th><th>Subject</th><th>Send Date</th><th>Actions</th></tr>
+    </thead>
+    <tbody>
+      {% for n in newsletters %}
+        <tr>
+          <td>{{ n.newsletterID }}</td>
+          <td>{{ n.subject }}</td>
+          <td>{{ n.sendDate }}</td>
+          <td>
+            {% if session.perms.update %}
+              <a href="{{ url_for('newsletter.edit', id=n.newsletterID) }}" class="btn btn-sm btn-warning">Edit</a>
+            {% endif %}
+            {% if session.perms.delete %}
+              <form method="post" action="{{ url_for('newsletter.delete', id=n.newsletterID) }}" style="display:inline">
+                <button class="btn btn-sm btn-danger">Delete</button>
+              </form>
+            {% endif %}
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+{% endblock %}
 
