--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -6,14 +6,46 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <div class="container">
-            <a class="navbar-brand" href="/">Alumni Management</a>
-            <div>
-                <a class="btn btn-outline-light" href="{{ url_for('auth_bp.logout') }}">Logout</a>
-            </div>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ url_for('alumni.list_alumni') }}">Alumni Management</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('alumni.list_alumni') }}">Alumni</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('address.list_addresses') }}">Addresses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('degree.list_degrees') }}">Degrees</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('employment.list_employment') }}">Employment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('donation.list_donations') }}">Donations</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('skillset.list_skills') }}">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('newsletter.list_newsletters') }}">Newsletters</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth_bp.login') }}">Login</a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
     <div class="container">
         {% with messages = get_flashed_messages() %}
