--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="{{ url_for('degree.list_degrees') }}">Degrees</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('employment.list_employment') }}">Employment</a>
+          <a class="nav-link" href="{{ url_for('employment.list_employments') }}">Employment</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('donation.list_donations') }}">Donations</a>
