--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,47 +7,46 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{{ url_for('alumni.list_alumni') }}">Alumni Management</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('home') }}">Alumni Management</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
 
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('alumni.list_alumni') }}">Alumni</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('address.list_addresses') }}">Addresses</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('degree.list_degrees') }}">Degrees</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('employment.list_employments') }}">Employment</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('donation.list_donations') }}">Donations</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('skillset.list_skills') }}">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('newsletter.list_newsletters') }}">Newsletters</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth_bp.login') }}">Login</a>
-        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('alumni.list_alumni') }}">Alumni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('address.list_addresses') }}">Addresses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('degree.list_degrees') }}">Degrees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('employment.list_employments') }}">Employment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('donation.list_donations') }}">Donations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('skillset.list_skillsets') }}">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('newsletter.list_newsletters') }}">Newsletters</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth_bp.login') }}">Login</a>
+                    </li>
 
-      </ul>
-    </div>
-  </div>
-</nav>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-
-    <div class="container">
+    <div class="container mt-4">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div class="alert alert-info">
@@ -60,6 +59,7 @@
 
         {% block content %}{% endblock %}
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
