--- a/backend/templates/alumni_form.html
+++ b/backend/templates/alumni_form.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Add New Alumnus{% endblock %}
+{% block title %}Add/Edit Alumnus{% endblock %}
+
 {% block content %}
-  <h2>Add New Alumnus</h2>
+  <h2>{% if alumnus %}Edit{% else %}Add New{% endif %} Alumnus</h2>
+  
   <form method="post">
     {{ form.hidden_tag() }}
     <div class="mb-3">
@@ -30,4 +32,39 @@
     </div>
     {{ form.submit(class="btn btn-primary") }}
   </form>
+
+  {% if addresses and alumnus %}
+  <h3 class="mt-5">Addresses</h3>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Street</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Zip</th>
+        <th>Primary</th>
+        <th>Active</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for addr in addresses %}
+      <tr>
+        <td>{{ addr.address }}</td>
+        <td>{{ addr.city }}</td>
+        <td>{{ addr.state }}</td>
+        <td>{{ addr.zipCode }}</td>
+        <td>{{ addr.primaryYN }}</td>
+        <td>{{ addr.activeYN }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  {% if session.perms.insert == 'Y' %}
+    <a class="btn btn-primary" href="{{ url_for('address.add_address', alumniID=alumnus.alumniID) }}">
+      Add New Address
+    </a>
+  {% endif %}
+  {% endif %}
+
 {% endblock %}
