--- a/backend/templates/employment_list.html
+++ b/backend/templates/employment_list.html
@@ -1,17 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Employment List{% endblock %}
+
 {% block content %}
-  <h2>Employment</h2>
+  <h2 class="mt-4">Employment</h2>
+
   {% if session.perms.insert == 'Y' %}
     <a href="{{ url_for('employment.add_employment') }}" class="btn btn-primary mb-3">Add New Employment</a>
   {% endif %}
-  <table class="table table-striped">
+
+  <table class="table table-striped table-bordered">
     <thead>
       <tr>
         <th>Company</th>
         <th>Job Title</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Zip</th>
         <th>Start Date</th>
         <th>End Date</th>
+        <th>Current</th>
+        <th>Notes</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -20,8 +28,13 @@
       <tr>
         <td>{{ emp.company }}</td>
         <td>{{ emp.jobTitle }}</td>
-        <td>{{ emp.startDate }}</td>
-        <td>{{ emp.endDate }}</td>
+        <td>{{ emp.city or '-' }}</td>
+        <td>{{ emp.state or '-' }}</td>
+        <td>{{ emp.zip or '-' }}</td>
+        <td>{{ emp.startDate or '-' }}</td>
+        <td>{{ emp.endDate or '-' }}</td>
+        <td>{{ emp.currentYN }}</td>
+        <td>{{ emp.notes or '-' }}</td>
         <td>
           {% if session.perms.update == 'Y' %}
             <a href="{{ url_for('employment.edit_employment', EID=emp.EID) }}" class="btn btn-sm btn-warning">Edit</a>
@@ -37,5 +50,8 @@
     </tbody>
   </table>
 {% endblock %}
+{% if employments|length == 0 %}
+  <p>No employment records found.</p>
+{% endif %}
 
-
+{% endblock %}
