--- a/backend/templates/employment_form.html
+++ b/backend/templates/employment_form.html
@@ -4,7 +4,7 @@
   <h2>Employment</h2>
   <form method="post">
     {{ form.csrf_token }}
-    {{ form.companyName.label }} {{ form.companyName(class="form-control mb-2") }}
+    {{ form.company.label }} {{ form.company(class="form-control mb-2") }}
     {{ form.jobTitle.label }} {{ form.jobTitle(class="form-control mb-2") }}
     {{ form.startDate.label }} {{ form.startDate(class="form-control mb-2") }}
     {{ form.endDate.label }} {{ form.endDate(class="form-control mb-2") }}
