--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -1,16 +1,26 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
+
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {{ form.csrf_token }}
-    <div class="mb-3">
-      {{ form.UID.label }} {{ form.UID(class="form-control") }}
-    </div>
-    <div class="mb-3">
-      {{ form.password.label }} {{ form.password(class="form-control") }}
-    </div>
-    <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
-  </form>
+  <div class="container mt-5" style="max-width: 500px;">
+    <h2 class="mb-4">Login</h2>
+    <form method="post">
+      {{ form.hidden_tag() }}
+
+      <div class="mb-3">
+        {{ form.UID.label(class="form-label") }}
+        {{ form.UID(class="form-control") }}
+      </div>
+
+      <div class="mb-3">
+        {{ form.password.label(class="form-label") }}
+        {{ form.password(class="form-control") }}
+      </div>
+
+      <div class="mb-3">
+        {{ form.submit(class="btn btn-primary") }}
+      </div>
+    </form>
+  </div>
 {% endblock %}
 
