--- a/backend/templates/degree_form.html
+++ b/backend/templates/degree_form.html
@@ -5,7 +5,7 @@
   <form method="post">
     {{ form.csrf_token }}
     {{ form.degreeType.label }} {{ form.degreeType(class="form-control mb-2") }}
-    {{ form.institution.label }} {{ form.institution(class="form-control mb-2") }}
+    {{ form.university.label }} {{ form.university(class="form-control mb-2") }}
     {{ form.major.label }} {{ form.major(class="form-control mb-2") }}
     {{ form.conferredDate.label }} {{ form.conferredDate(class="form-control mb-2") }}
     {{ form.primaryYN.label }} {{ form.primaryYN(class="form-select mb-2") }}
