upddated if/elif statements

--- a/backend/templates/alumni_form.html
+++ b/backend/templates/alumni_form.html
@@ -48,7 +48,7 @@
 {% else %}
   <p>No addresses on record.</p>
 {% endif %}
-{% if session.perms.insert == 'Y' %}
+{% if session.perms.insert == 'Y' or item == 'N' %}
   <a class="btn btn-secondary mb-3" href="{{ url_for('address.add_address', alumniID=alumnus.alumniID) }}">
     Add New Address
   </a>
@@ -70,7 +70,7 @@
 {% else %}
   <p>No degrees on record.</p>
 {% endif %}
-{% if session.perms.insert == 'Y' %}
+{% if session.perms.insert == 'Y' or item == 'N' %}
   <a class="btn btn-secondary mb-3" href="{{ url_for('degree.add_degree', alumniID=alumnus.alumniID) }}">
     Add New Degree
   </a>
@@ -117,7 +117,7 @@
 {% else %}
   <p>No donations recorded.</p>
 {% endif %}
-{% if session.perms.insert == 'Y' %}
+{% if session.perms.insert == 'Y' or item == 'N' %}
   <a class="btn btn-secondary mb-3" href="{{ url_for('donation.add_donation', alumniID=alumnus.alumniID) }}">
     Add New Donation
   </a>
@@ -138,7 +138,7 @@
 {% else %}
   <p>No skills recorded.</p>
 {% endif %}
-{% if session.perms.insert == 'Y' %}
+{% if session.perms.insert == 'Y' or item == 'N' %}
   <a class="btn btn-secondary mb-3" href="{{ url_for('skillset.add_skill', alumniID=alumnus.alumniID) }}">
     Add New Skill
   </a>
